--- a/index.html
+++ b/index.html
@@ -353,6 +353,7 @@
     <script>
         // Demo名称到显示标题的映射字典
         const demoTitleMapping = {
+            'seeyouagain': 'See You Again',
             'mooncast_0': 'GPT4',
             'mooncast_1': 'Game theory',
             'mooncast_2': 'Nobel Prize 2024',
@@ -378,6 +379,7 @@
 
         // 对比模型的demo列表（显示所有模型）
         const comparisonDemos = [
+            'seeyouagain',
             'harryPotter',
             'steve_jobs',
             'mooncast_0',
